[gd_scene load_steps=8 format=3 uid="uid://be6ai8p5ud1bx"]

[ext_resource type="Script" path="res://Script/ButtonAmeliorationHelium.gd" id="1_rcqg6"]
[ext_resource type="Theme" uid="uid://c2oksi2eb0sxy" path="res://Design/Themes/themeTest.tres" id="2_yu6jg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moki4"]
bg_color = Color(0.752941, 0.752941, 0.752941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kiut"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6u0ki"]

[sub_resource type="LabelSettings" id="LabelSettings_oidvf"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dfc3"]
bg_color = Color(0.611765, 0.611765, 0.611765, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Button" type="Button"]
custom_minimum_size = Vector2(300, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -60.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_moki4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3kiut")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6u0ki")
disabled = true
script = ExtResource("1_rcqg6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NomLabel" type="Label" parent="HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Nom"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Description"
label_settings = SubResource("LabelSettings_oidvf")
autowrap_mode = 3

[node name="BonusLabel" type="Label" parent="HBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Bonus"

[node name="RightVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NiveauLabel" type="Label" parent="HBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Niveau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrixLabel" type="Label" parent="HBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Prix"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelForUnlock" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelForUnlock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmeliorationHeliumUnlockButton" type="Button" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yu6jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_3dfc3")
text = "Unlock"

[node name="AtomeLabel" type="Label" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
text = "Atome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrixLabel" type="Label" parent="PanelForUnlock/VBoxContainer"]
layout_mode = 2
text = "Prix"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelForUnlock/VBoxContainer/AmeliorationHeliumUnlockButton" to="." method="_on_amelioration_helium_unlock_button_pressed"]
